# stock_auto

./: .env.example  .gitignore  CLAUDE.md  GETTING_STARTED.md  INSPECTION_REPORT.md  READINESS_STATUS_2026-03-27.md  README.md  REAL_READINESS_AUDIT_2026-03-26.md  REAL_READINESS_AUDIT_UPDATE_2026-03-27.md  harnes.md  harnes_template.md  macro_investment_dashboard_30yr.html  merge.md  merge_2.md  pyproject.toml  run_tests.py  sector_map_kr.json  sitecustomize.py
config/: strategies.yaml  trading.yaml  universe.json
dashboard/: __init__.py  app.py  label_utils.py  log_utils.py  state_loader.py  stress_helpers.py  symbol_utils.py
dashboard/components/: crawling_results_tab.py  crawling_run_tab.py  growth_tab.py  macro_tab.py  market_tab.py  overview_tab.py  sidebar.py
data/: best_params_AAPL_macd_rsi.json  dashboard_kr.json  dashboard_us.json  regime_model.pkl
docs/: AUTO_TRADING_GUIDE.md  PM_ANALYSIS_REPORT.md  PM_ANALYSIS_REPORT_V2.md  PROJECT_ANALYSIS.md  api_setup.md
docs/legacy_stock_crawling/: harnes.md  result.md
scripts/: init_dashboard_data.py  run_backtest.py  run_ga_optimization.py  run_scheduler.py  run_trading.py  test_copilot.py  test_features.py  test_multimodal.py  train_regime.py
scripts/experiments/: backtest_2025.py  backtest_2025_compare.py  check_us_exchange.py  run_auto_trading.py  run_live.py  run_us_growth.py  run_us_trading.py  simulate_200k.py  simulate_9_factor.py  simulate_growth.py  simulate_selection.py  verify_new_factors.py
src/: __init__.py  config.py
src/analysis/: arbitrage.py  chart.py  dart_disclosure.py  growth_stock_finder.py  market_data.py  multimodal.py  orderflow.py  regime.py  sentiment.py  stress.py
src/backtest/: __init__.py  engine.py
src/broker/: __init__.py  base.py  factory.py  kis.py  kiwoom.py  shinhan.py
src/copilot/: agent.py  debate.py  tools.py
src/crawling/: __init__.py  _env_overrides.py  backfill_5day_return.py  backtest_early_signal.py  daily_trend_writer.py  early_signal.py  flow_fetcher.py  flow_signal.py  gemini_client.py  generate_snapshots.py  market_trend.py  news_aggregator.py  news_fetcher.py  ohlcv_store.py  run_daily.py  rvol_computer.py  schemas.py  sector_map_kr.py  service_account_path.py  (+7 more)
tests/: conftest.py  test_api_client.py  test_audit_log.py  test_auto_trader_dry_run.py  test_backtest.py  test_broker_contracts.py  test_circuit_breaker.py  test_exit_module.py  test_exit_strategies.py  test_issue1_2_fix.py  test_issue1_2_realdata.py  test_kakao_notifier.py  test_live.py  test_ml_backtest_entrypoints.py  test_ml_readiness_contracts.py  test_ml_strategy.py  test_ml_walkforward_report.py  test_mock_broker_e2e.py  test_mock_broker_recovery.py  test_models.py  test_phase1_runtime_contracts.py  test_rl_strategy.py  test_run_trading_ml_comparison.py  test_run_trading_ml_runtime.py  test_selector_runtime_guard.py  test_self_healing.py  test_strategies.py  test_us_trading_dry_run.py
(+187 files in other folders)
