[project]
name = "stock-auto"
version = "0.1.0"
description = "주식 자동매매 시스템 - 백테스팅 및 실전 매매"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "finance-datareader>=0.9.50",
    "google-auth>=2.29.0",
    "gspread>=6.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pykis>=0.4.0",  # 한국투자증권 API 래퍼
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
    "mplfinance>=0.12.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "streamlit>=1.30.0",
    "yfinance>=0.2.0",
    "playwright>=1.58.0",
    "praw>=7.7.1",
    "httpx>=0.24.0",
    "websockets>=11.0",
    "asyncio>=3.4.3",
]

[project.scripts]
stock-crawling-daily = "src.crawling.run_daily:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v -p sitecustomize --cov=src --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
